--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,4 +92,30 @@
         "when a user tries to pick up one of cards.\n\n"
     </string>
     <string name="action_settings">Settings</string>
+    <string name="faq_s">FAQ\'S</string>
+    <string name="textview">Watch video</string>
+    <string name="privacyPolicy">Watch video</string>
+    <string name="title_activity_login">Sign in</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome !"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
+    <string name="todo">TODO</string>
+    <string name="name">Name</string>
+    <string name="enter_userName">Enter user name</string>
+    <string name="enter_email">Enter email</string>
+    <string name="enter_password">Enter password</string>
+    <string name="login">Login</string>
+    <string name="update">update</string>
+    <string name="forgot_password">Forgot password?</string>
+    <string name="already_have_an_account">Already have an account?Login</string>
+    <string name="new_to_bheemcash_sign_up">New to bheemcash?Sign up</string>
+    <string name="gallery">gallery</string>
+    <string name="camera">Camera</string>
+
+
 </resources>
